tests/ui/rfcs/rfc-2632-const-trait-impl/const-drop.precise.stderr
error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/const-drop.rs:19:22
   |
LL | const fn a<T: ~const Destruct>(_: T) {}
   |                      ^^^^^^^^

error: aborting due to previous error

